--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -7,6 +7,7 @@ name: CI Workflow
 on:
   push:
     branches: [main]
+  pull_request:
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
