--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,6 +27,6 @@ jobs:
           run: npm ci
       
         - name: Integration Tests
-          run: npm run test
+          run: test-chrome
         
           
