--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,6 @@ jobs:
           uses: actions/checkout@v4.2.2
       
         - name: Integration Tests
-          run: test-chrome
+          run: npm run test-chrome
         
           
