--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,9 @@ jobs:
     # Runs a single command using the runners shell
         - name: Checkout
           uses: actions/checkout@v4.2.2
+
+        - name: Node
+          run: npm install
       
         - name: Integration Tests
           run: npm run test-chrome
