--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test-chrome": "npx cypress run --browser chrome  --headless",
     "test-firefox": "npx cypress run --browser firefox --headless"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
   "dependencies": {
     "cypress": "^13.15.0",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "cypress-mochawesome-reporter": "^3.8.2"
   }
-
 }
